--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="theme-color" content="#7159c1" />
+    <link rel="apple-touch-icon" href="favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GoBarber</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para rodar o app.</noscript>
     <div id="root"></div>
   </body>
 </html>
